<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">手机挂号网</string>
    <string name="action_settings">Settings</string>
	<string name="network_error">当前无网络连接,请检查是否有可用网络</string>
	<string name="change_wifi">当前WIFI连接</string>
	<string name="change_3g">当前为3G连接,请注意您的流量哦</string>    
    <string name="email">邮&#160;&#160;&#160;&#160;箱</string>
    <string name="telephone">手机号</string>
    
    <string name="guahao">挂号</string>
    <string name="zixun">咨询</string>
    <string name="faxian">发现</string>
    <string name="geren_center">个人中心</string>
	<string name="message">消息</string>	
	<string name="message_empty">暂无消息提醒</string>
	<string name="fenzhen">智能导诊</string>
	<string name="solution">智能推荐</string>
	<string name="my_attention">我的关注</string>
	<string name="attention">关注</string>
	<string name="my_order">我的预约</string>
	<string name="cancel">取消</string>
	<string name="select_hospital">选择医院</string>
	<string name="back">返回</string>
	<string name="select_section">选择科室</string>
	<string name="sure">确定</string>
	<string name="sure_change">确定修改</string>
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="age">年龄:</string>
	<string name="zixun_dept">咨询科室:</string>
	<string name="consult_doctor">咨询医生:</string>
	<string name="zixun_hospital">咨询医院:</string>
	<string name="login">登陆</string>	
	<string name="login_hint">挂号网账户可直接登陆</string>
	<string name="login_hint_username">登录名或手机号</string>
	<string name="login_hint_password">密码</string>
	<string name="login_hint_password_confirm">请再输入一次密码</string>
	<string name="register_identifying">验证码</string>
	<string name="register">注册</string>
	<string name="get_identify">获取验证码</string>
	<string name="register_new">注册新账号</string>
	<string name="forget_pwd">忘记密码</string>
	<string name="pickphoto">相册</string>
   	<string name="takephoto">照相机</string>
	
	<string name="username">牛威</string>
	<string name="zhuzhi">主治医师</string>
	<string name="phone">登录名:15652953455</string>
	<string name="my_order_list">我的预约单</string>
	<string name="order">预约</string>
	<string name="change_pwd">修改密码</string>
	<string name="login_name">用户名</string>
	<string name="my_zixun">我的咨询</string>
	<string name="my_bingli">我的病例</string>
	<string name="my_guanzhu">我的关注</string>
	<string name="shezhi">设置</string>
	<string name="user_info">用户信息</string>
	
	<string name="mingyizaixian">名医在线</string>
	<string name="yishengdongtai">医生动态</string>
	<string name="jibing">疾病与营养</string>
	<string name="share">分享</string>
	
	<string name="zixun_hint">当前位置:%s		搜索医院,医生,科室,疾病</string>
	<string name="zixun_more_zhuanjia">更多专家</string>
	<string name="news_click_more">点击加载更多</string>
	
	<string name="guahao_choose_hospital">请选择医院</string>
	<string name="guahao_choose_dept">请选择科室</string>
	<string name="dept">外科、内科、妇产科</string>
	<string name="go_guahao">去挂号</string>
	<string name="zixun_doctor">向专家咨询</string>
	
	<string name="navigate">新手导航</string>
	<string name="about_us">关于我们</string>
	<string name="advice_to_us">意见反馈</string>
	<string name="check_update">检查更新</string>
	<string name="version">0.1.1</string>
	<string name="logout">退出登录</string>
	<string name="exist_query">确认退出吗?</string>
	<string name="hospital_name">全世界最帅医院特别门诊——专治各种不服</string>
	<string name="loading">正在加载</string>
	<string name="click_loading">点击加载</string>
	<string name="connect_timeout">连接超时</string>
	<string name="submit">提交</string>
	
	<string name="our_team">\t[挂号网]是背景航空航天大学软件学院系统分析设计小组——团灭发动机共同开发完成,软件包括客户端和网页端,android客户端在实现了完整的功能的基础上尽量在提升用户的使用体验.挂号网APP专为患者量身打造,用户版包括专家咨询、智能分诊、即时挂号、院外候诊、处方查询.\n\t您的支持是我们最大的幸运\n\n牛威:android\n黄星:Web端\n穆梦琪:前端\n孙芙媛:前端\n黄龙:android\n宋瑞:android\n刘家辉:数据库\n邰云剑:Web端\n李天禹:数据库</string>
	<string name="contact_you">方便我们联系您</string>
	<string name="feedback">意见反馈</string>
	<string name="doctor_info">医生微站</string>
	<string name="contact_phone">可不填</string>
	<string name="contact_write">需要填写您宝贵的信息</string>
	<string name="zixun_write">请详细描述您的病情,症状,治疗过程以及想要的帮助</string>
	<string name="change_pwd_old">请输入原密码</string>
	<string name="change_pwd_old_is_empty">原密码不能为空</string>
	<string name="change_pwd_new">请输入新密码</string>
	<string name="change_pwd_new_is_empty">新密码不能为空</string>
	<string name="change_pwd_success">密码修改成功,请记住新密码</string>
	<string name="change_pwd_error">密码修改失败,请检查错误原因</string>
	<string name="upload_picture">上传照片</string>
	<string name="doctor_info_detail">医生简介</string>
	<string name="guanzhu_doctor">关注的医生</string>
	<string name="guanzhu_hospital">关注的医院</string>
	<string name="doctor_info_yuyue">预约挂号</string>
	<string name="hospital_desc">简介</string>
	<string name="rule">预约规则:班次每天八点更新</string>
	<string name="yiyuan_rule">\n1、预约成功的患者必须携带工农中建四大银行卡到自动取号机取号（必须为磁条银行卡），银行卡的卡主身份证号码必须与患者身份证号一致且为第二代身份证，并保证卡内有金额，在各楼层自助机取号和交费（医保患者在医保专用自助机取号，军人可凭借军官证在挂号窗口排队取号)\n2、预约周期：7天\n3、放号时间：08:30（开放新一天号源）\n4、停止预约时间： 16:00（停止预约次日号源）\n5、取消预约时间：就诊前一日16:00前可办理取消\n6、取号时间：上午号：就诊当日09:30前\n7、预约时请准确录入患者本人身份信息，无身份证儿童可填写户口本的身份证编号，凭户口本取号就诊。凭儿童出生证明编号、军人证件及护照预约的患者，可通过95169电话预约\n8、18岁以下儿童、80岁以上的老人或军官证患者无法提供银行卡取号，需携带患者有效证件和预约短信到挂号窗口取号。\n9、小儿科只限小于14周岁的患者办理预约</string>
	
	<string name="sendSucceed">发送成功</string>
    <string name="badNetwork">网络差</string>
    <string name="verifyFailed">验证2失败</string>
    <string name="verifySucceed">验证1成功</string>
    <string name="sendFailed">发送失败</string>
    <string name="no_order">您还没有预约过任何医生</string>
    <string name="how_to_guahao">如何快速预约挂号</string>
    <string name="order_step_one">选择医院科室医生</string>
    <string name="order_step_two">填写预约信息</string>
    <string name="order_step_three">然后就可以凭身份证和短信去医院就诊</string>
    
    <string name="select_doctor">选择医生</string>
    <string name="guahao_info">预约信息</string>
    <string name="jiuzhen_man">就诊人 : </string>
    <string name="chufuzhen">初/复诊 : </string>
    <string name="zhifufangshi">支付方式 : </string>
    <string name="info_hospital_name">医院名称:</string>
    <string name="section_name">挂号科室:</string>
<<<<<<< HEAD
    <string name="doctor_name">医生姓名:</string>
=======
    <string name="doctor_name">医院姓名:</string>
>>>>>>> origin/master
    <string name="menzhen_time">门诊时间:</string>
    <string name="menzhen_class">门诊类型:</string>
    <string name="guahao_fee">挂号费用:</string>
</resources>
