<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText 
	    android:id="@+id/contact_email"
	    style="@style/width_fill_parent"
	    android:hint="@string/contact_you"
	    android:inputType="textEmailAddress"
	    android:textSelectHandleLeft="@string/app_name"
	    />
	
	<EditText 
	    android:id="@+id/contact_phone"
	    style="@style/width_fill_parent"
	    android:hint="@string/contact_phone"
	    android:inputType="phone"
	    android:textSelectHandleLeft="@string/app_name"
	    />
	
	<EditText 
	    android:id="@+id/contact_content"
	    style="@style/width_fill_parent"
	    android:hint="@string/contact_phone"
	    android:inputType="text"
	    android:textSelectHandleLeft="@string/app_name"
	    />
</LinearLayout>
