<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText 
	    android:id="@+id/change_pwd_old"
	    style="@style/width_fill_parent"
	    android:hint="@string/change_pwd_old"
	    android:padding="20dp"
	    android:inputType="textPassword"
	    />
	<EditText 
	    android:id="@+id/change_pwd_new"
	    style="@style/width_fill_parent"
	    android:hint="@string/change_pwd_new"
	    android:padding="20dp"
	    android:inputType="textPassword"
	    />
	<Button 
	    android:id="@+id/change_pwd_submit"
	    style="@style/width_fill_parent"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="40dp"
	    android:text="@string/sure_change"
	    android:textColor="@color/white"
	    android:textSize="18sp"
	    android:background="@drawable/login_btn_bg"
	    />
</LinearLayout>
