<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:orientation="vertical"
        android:background="@color/gray_light">
        
    </LinearLayout>
        
    
    <LinearLayout
        style="@style/width_fill_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
		android:background="@color/white"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"        
        >
        <TextView
            android:id="@+id/main_guahao"
            style="@style/main_tab"
            android:drawableTop="@drawable/ic_tab_guahao_unchecked"            
            android:text="@string/guahao"            
            />  
        <TextView
            android:id="@+id/main_zixun"
            style="@style/main_tab"
            android:drawableTop="@drawable/ic_tab_consult_unchecked"            
            android:text="@string/zixun"            
            />  
        <TextView
            android:id="@+id/main_faxian"
            style="@style/main_tab"
            android:drawableTop="@drawable/ic_tab_discovery_unchecked"            
            android:text="@string/faxian"            
            />  
        <TextView
            android:id="@+id/main_geren_center"
            style="@style/main_tab"
            android:drawableTop="@drawable/ic_tab_me_unchecked"            
            android:text="@string/geren_center"            
            />         
    </LinearLayout>

</LinearLayout>
